--- a/index.html
+++ b/index.html
@@ -20,15 +20,22 @@
 </head>
 
 <body class="lexend">
-    <header>
-        <nav>
-            <div>
-                <button>Home</button>
-                <div>
-                    <img src="" alt="">
+    <header class="bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-lg bg-opacity-40 border border-gray-100">
+        <nav class="bg-[#F9F7F3]">
+            <div class="flex justify-around pt-6 pb-9">
+                <button class="btn bg-[#B4F461] py-3 px-8">Blog</button>
+                <div class="flex items-center gap-3">
+                    <img src="./assets/logo.png" alt=""><p>Donate Bangladesh</p>
+                </div>
+                <div class="flex items-center gap-1">
+                    <img class="mr-2" src="./assets/coin.png" alt=""><p>5500</p><span>BDT</span>
                 </div>
             </div>
         </nav>
+        <div class="flex justify-center pt-6 pb-9 gap-4">
+            <button class="btn py-4 px-8 bg-[#B4F461] border-none">Donation</button>
+            <button class="btn py-4 px-8 border-none">History</button>
+        </div>
     </header>
 </body>
 
