--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         class="sticky top-0 z-10 bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-lg bg-opacity-40 border border-gray-100 ">
         <nav class="bg-[#fffc5318] bg-opacity-15">
             <div class="flex justify-around pt-6 pb-9">
-                <button class="btn bg-[#B4F461] py-3 px-8 border-none">Blog</button>
+                <a href="blog.html"><button class="btn bg-[#B4F461] py-3 px-8 border-none">Blog</button></a>
                 <div class="flex items-center gap-3">
                     <img src="./assets/logo.png" alt="">
                     <p>Donate Bangladesh</p>
@@ -157,6 +157,9 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="h-[80px] bg-[#fffc5328] mt-9"></div>
+    </footer>
 </body>
 
 </html>
