modal sucssesfully added

--- a/blog.html
+++ b/blog.html
@@ -21,10 +21,10 @@
         class="sticky top-0 z-10 bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-lg bg-opacity-40 border border-gray-100 ">
         <nav class="bg-[#fffc5318] bg-opacity-15">
             <div class="flex justify-around pt-6 pb-9">
-                <a href="index.html"><button class="btn bg-[#B4F461] py-3 px-8 border-none">home</button></a>
+                <a href="index.html"><button class="btn bg-[#B4F461] py-3 px-8 border-none font-bold text-xl">home</button></a>
                 <div class="flex items-center gap-3">
                     <img src="./assets/logo.png" alt="">
-                    <p>Donate Bangladesh</p>
+                    <p class="text-xl font-bold">Donate Bangladesh</p>
                 </div>
                 <div class="flex items-center gap-1">
                     <img class="mr-2" src="./assets/coin.png" alt="">
@@ -32,10 +32,6 @@
                 </div>
             </div>
         </nav>
-        <div class="flex justify-center pt-16 pb-9 gap-3">
-            <button class="btn py-4 px-8 bg-[#B4F461] border-none">Donation</button>
-            <button class="btn py-4 px-8 border-none">History</button>
-        </div>
     </header>
     <main class="w-3/4 mx-auto mb-11">
         <button class="btn rounded-full w-[100px] bg-[#b4f46173] mt-10">FAQ -></button>
@@ -73,5 +69,8 @@
             </div>
           </div>
     </main>
+    <footer></footer>
+        <div class="h-[80px] bg-[#fffc5328] mt-9"></div>
+    </footer>
 </body>
 </html>
