--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
         class="sticky top-0 z-10 bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-lg bg-opacity-40 border border-gray-100 ">
         <nav class="bg-[#fffc5318] bg-opacity-15">
             <div class="flex justify-around pt-6 pb-9">
-                <a href="blog.html"><button class="btn bg-[#B4F461] py-3 px-8 border-none">Blog</button></a>
+                <a href="blog.html"><button
+                        class="btn bg-[#B4F461] py-3 px-8 border-none font-bold text-xl">Blog</button></a>
                 <div class="flex items-center gap-3">
                     <img src="./assets/logo.png" alt="">
-                    <p>Donate Bangladesh</p>
+                    <p class="font-bold text-xl">Donate Bangladesh</p>
                 </div>
                 <div class="flex items-center gap-1">
                     <img class="mr-2" src="./assets/coin.png" alt="">
-                    <p>5500</p><span>BDT</span>
+                    <p id="main-balance">5500</p><span>BDT</span>
                 </div>
             </div>
         </nav>
@@ -49,17 +50,17 @@
                 <div class="card-body w-2/4 ">
                     <div class="flex justify-start w-[150px] bg-[#1111110D] py-3 px-4 rounded-lg items-center">
                         <img class="mr-2" src="./assets/coin.png" alt="">
-                        <p class="mr-1">8000</p><span>BDT</span>
+                        <p id="donation-value" class="mr-1">8000</p><span>BDT</span>
                     </div>
                     <h2 class="card-title">Donate for Flood at Noakhali, Bangladesh</h2>
                     <p> The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
                         donation will help provide essential supplies and to those affected by this disaster. Every
                         contribution, big or small, makes difference. Please join us in supporting the relief efforts
                         and making a positive impact on the lives of those in need.</p>
-                    <input type="number" class="border border-[#1111111A] p-4 rounded-lg"
+                    <input type="number" id="donation-input" class="border border-[#1111111A] p-4 rounded-lg"
                         placeholder="Write Donation Amount">
                     <!-- Open the modal using ID.showModal() method -->
-                    <button class="btn bg-[#B4F461]" onclick="my_modal_1.showModal()">Donate Now</button>
+                    <button id="btn-donate" class="btn bg-[#B4F461]">Donate Now</button>
                     <dialog id="my_modal_1" class="modal text-center">
                         <div class="modal-box">
                             <h2 class="text-2xl font-bold">Congrats!</h3>
@@ -87,7 +88,7 @@
                 <div class="card-body w-2/4 ">
                     <div class="flex justify-start w-[150px] bg-[#1111110D] py-3 px-4 rounded-lg items-center">
                         <img class="mr-2" src="./assets/coin.png" alt="">
-                        <p class="mr-1">4000</p><span>BDT</span>
+                        <p id="donation-value-2" class="mr-1">4000</p><span>BDT</span>
                     </div>
                     <h2 class="card-title">Donate for Flood Relief in Feni,Bangladesh</h2>
                     <p> The recent floods in Feni have devastated local communities, leading to severe disruption and
@@ -95,9 +96,10 @@
                         medical supplies, to those affected by this calamity. Together, we can offer crucial support and
                         help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a
                         real difference. Please consider donating today to assist those in urgent need.</p>
-                    <input type="number" class="border border-[#1111111A] p-4 rounded-lg"
+                    <input type="number" id="donation-input-2" class="border border-[#1111111A] p-4 rounded-lg"
                         placeholder="Write Donation Amount">
-                    <button class="btn bg-[#B4F461]" onclick="my_modal_1.showModal()">Donate Now</button>
+                    <button id="btn-donate-2" class="btn bg-[#B4F461]">Donate
+                        Now</button>
                     <dialog id="my_modal_2" class="modal text-center">
                         <div class="modal-box">
                             <h2 class="text-2xl font-bold">Congrats!</h3>
@@ -125,7 +127,7 @@
                 <div class="card-body w-2/4 ">
                     <div class="flex justify-start w-[150px] bg-[#1111110D] py-3 px-4 rounded-lg items-center">
                         <img class="mr-2" src="./assets/coin.png" alt="">
-                        <p class="mr-1">6000</p><span>BDT</span>
+                        <p id="donation-value-3" class="mr-1">6000</p><span>BDT</span>
                     </div>
                     <h2 class="card-title">Aid for Injured in the Quota Movement</h2>
                     <p> The recent Quota movement has resulted in numerous injuries and significant hardship for many
@@ -134,9 +136,9 @@
                         receive the care and support they need during this challenging time. Every donation plays a
                         vital role in alleviating their suffering and aiding in their recovery. Please consider making a
                         donation to support these brave individuals in their time of need.</p>
-                    <input type="number" class="border border-[#1111111A] p-4 rounded-lg"
+                    <input type="number" id="donation-input-3" class="border border-[#1111111A] p-4 rounded-lg"
                         placeholder="Write Donation Amount">
-                    <button class="btn bg-[#B4F461]" onclick="my_modal_1.showModal()">Donate Now</button>
+                    <button id="btn-donate-3" class="btn bg-[#B4F461]">Donate Now</button>
                     <dialog id="my_modal_3" class="modal text-center">
                         <div class="modal-box">
                             <h2 class="text-2xl font-bold">Congrats!</h3>
@@ -156,10 +158,14 @@
                 </div>
             </div>
         </div>
+        <section class="hidden">
+            <div></div>
+        </section>
     </main>
     <footer>
         <div class="h-[80px] bg-[#fffc5328] mt-9"></div>
     </footer>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
