--- a/index.html
+++ b/index.html
@@ -37,129 +37,131 @@
             </div>
         </nav>
         <div class="flex justify-center pt-16 pb-9 gap-3">
-            <button class="btn py-4 px-8 bg-[#B4F461] border-none">Donation</button>
-            <button class="btn py-4 px-8 border-none">History</button>
+            <button id="donation-btn" class="btn py-4 px-8 bg-[#B4F461] border-none">Donation</button>
+            <button id="history-btn" class="btn py-4 px-8 border-none">History</button>
         </div>
     </header>
-    <main class="w-3/4 m-auto mt-10 space-y-6">
-        <div class="border border-[#1111111A] rounded-2xl">
-            <div class="card card-side">
-                <figure class="pl-5 py-5">
-                    <img src="./assets/noakhali.png" alt="Noakhali Flood" />
-                </figure>
-                <div class="card-body w-2/4 ">
-                    <div class="flex justify-start w-[150px] bg-[#1111110D] py-3 px-4 rounded-lg items-center">
-                        <img class="mr-2" src="./assets/coin.png" alt="">
-                        <p id="donation-value" class="mr-1">8000</p><span>BDT</span>
-                    </div>
-                    <h2 class="card-title">Donate for Flood at Noakhali, Bangladesh</h2>
-                    <p> The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
-                        donation will help provide essential supplies and to those affected by this disaster. Every
-                        contribution, big or small, makes difference. Please join us in supporting the relief efforts
-                        and making a positive impact on the lives of those in need.</p>
-                    <input type="number" id="donation-input" class="border border-[#1111111A] p-4 rounded-lg"
-                        placeholder="Write Donation Amount">
-                    <!-- Open the modal using ID.showModal() method -->
-                    <button id="btn-donate" class="btn bg-[#B4F461]">Donate Now</button>
-                    <dialog id="my_modal_1" class="modal text-center">
-                        <div class="modal-box">
-                            <h2 class="text-2xl font-bold">Congrats!</h3>
-                                <div class="flex justify-center mt-3">
-                                    <img src="./assets/coin.png" alt="">
-                                </div>
-                                <p class="py-4 text-gray-600">You have donate for humankind</p>
-                                <h4 class="text-lg font-bold">Successfully</h4>
-                                <div class="modal-action flex justify-center">
-                                    <form method="dialog">
-                                        <!-- if there is a button in form, it will close the modal -->
-                                        <button class="btn">Close confirmation</button>
-                                    </form>
-                                </div>
+    <main>
+        <section id="donation-container" class="w-3/4 m-auto mt-10 space-y-6">
+            <div class="border border-[#1111111A] rounded-2xl">
+                <div class="card card-side">
+                    <figure class="pl-5 py-5">
+                        <img src="./assets/noakhali.png" alt="Noakhali Flood" />
+                    </figure>
+                    <div class="card-body w-2/4 ">
+                        <div class="flex justify-start w-[150px] bg-[#1111110D] py-3 px-4 rounded-lg items-center">
+                            <img class="mr-2" src="./assets/coin.png" alt="">
+                            <p id="donation-value" class="mr-1">8000</p><span>BDT</span>
                         </div>
-                    </dialog>
+                        <h2 class="card-title">Donate for Flood at Noakhali, Bangladesh</h2>
+                        <p> The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
+                            donation will help provide essential supplies and to those affected by this disaster. Every
+                            contribution, big or small, makes difference. Please join us in supporting the relief efforts
+                            and making a positive impact on the lives of those in need.</p>
+                        <input type="number" id="donation-input" class="border border-[#1111111A] p-4 rounded-lg"
+                            placeholder="Write Donation Amount">
+                        <!-- Open the modal using ID.showModal() method -->
+                        <button id="btn-donate" class="btn bg-[#B4F461]">Donate Now</button>
+                        <dialog id="my_modal_1" class="modal text-center">
+                            <div class="modal-box">
+                                <h2 class="text-2xl font-bold">Congrats!</h3>
+                                    <div class="flex justify-center mt-3">
+                                        <img src="./assets/coin.png" alt="">
+                                    </div>
+                                    <p class="py-4 text-gray-600">You have donate for humankind</p>
+                                    <h4 class="text-lg font-bold">Successfully</h4>
+                                    <div class="modal-action flex justify-center">
+                                        <form method="dialog">
+                                            <!-- if there is a button in form, it will close the modal -->
+                                            <button class="btn">Close confirmation</button>
+                                        </form>
+                                    </div>
+                            </div>
+                        </dialog>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="border border-[#1111111A] rounded-2xl">
-            <div class="card card-side">
-                <figure class="pl-5 py-5">
-                    <img src="./assets/feni.png" alt="Noakhali Flood" />
-                </figure>
-                <div class="card-body w-2/4 ">
-                    <div class="flex justify-start w-[150px] bg-[#1111110D] py-3 px-4 rounded-lg items-center">
-                        <img class="mr-2" src="./assets/coin.png" alt="">
-                        <p id="donation-value-2" class="mr-1">4000</p><span>BDT</span>
-                    </div>
-                    <h2 class="card-title">Donate for Flood Relief in Feni,Bangladesh</h2>
-                    <p> The recent floods in Feni have devastated local communities, leading to severe disruption and
-                        loss. Your generous donation will help provide immediate aid, including food, clean water, and
-                        medical supplies, to those affected by this calamity. Together, we can offer crucial support and
-                        help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a
-                        real difference. Please consider donating today to assist those in urgent need.</p>
-                    <input type="number" id="donation-input-2" class="border border-[#1111111A] p-4 rounded-lg"
-                        placeholder="Write Donation Amount">
-                    <button id="btn-donate-2" class="btn bg-[#B4F461]">Donate
-                        Now</button>
-                    <dialog id="my_modal_2" class="modal text-center">
-                        <div class="modal-box">
-                            <h2 class="text-2xl font-bold">Congrats!</h3>
-                                <div class="flex justify-center mt-3">
-                                    <img src="./assets/coin.png" alt="">
-                                </div>
-                                <p class="py-4 text-gray-600">You have donate for humankind</p>
-                                <h4 class="text-lg font-bold">Successfully</h4>
-                                <div class="modal-action flex justify-center">
-                                    <form method="dialog">
-                                        <!-- if there is a button in form, it will close the modal -->
-                                        <button class="btn">Close confirmation</button>
-                                    </form>
-                                </div>
+            <div class="border border-[#1111111A] rounded-2xl">
+                <div class="card card-side">
+                    <figure class="pl-5 py-5">
+                        <img src="./assets/feni.png" alt="Noakhali Flood" />
+                    </figure>
+                    <div class="card-body w-2/4 ">
+                        <div class="flex justify-start w-[150px] bg-[#1111110D] py-3 px-4 rounded-lg items-center">
+                            <img class="mr-2" src="./assets/coin.png" alt="">
+                            <p id="donation-value-2" class="mr-1">4000</p><span>BDT</span>
                         </div>
-                    </dialog>
+                        <h2 class="card-title">Donate for Flood Relief in Feni,Bangladesh</h2>
+                        <p> The recent floods in Feni have devastated local communities, leading to severe disruption and
+                            loss. Your generous donation will help provide immediate aid, including food, clean water, and
+                            medical supplies, to those affected by this calamity. Together, we can offer crucial support and
+                            help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a
+                            real difference. Please consider donating today to assist those in urgent need.</p>
+                        <input type="number" id="donation-input-2" class="border border-[#1111111A] p-4 rounded-lg"
+                            placeholder="Write Donation Amount">
+                        <button id="btn-donate-2" class="btn bg-[#B4F461]">Donate
+                            Now</button>
+                        <dialog id="my_modal_2" class="modal text-center">
+                            <div class="modal-box">
+                                <h2 class="text-2xl font-bold">Congrats!</h3>
+                                    <div class="flex justify-center mt-3">
+                                        <img src="./assets/coin.png" alt="">
+                                    </div>
+                                    <p class="py-4 text-gray-600">You have donate for humankind</p>
+                                    <h4 class="text-lg font-bold">Successfully</h4>
+                                    <div class="modal-action flex justify-center">
+                                        <form method="dialog">
+                                            <!-- if there is a button in form, it will close the modal -->
+                                            <button class="btn">Close confirmation</button>
+                                        </form>
+                                    </div>
+                            </div>
+                        </dialog>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="border border-[#1111111A] rounded-2xl">
-            <div class="card card-side">
-                <figure class="pl-5 py-5">
-                    <img src="./assets/quota-protest.png" alt="Noakhali Flood" />
-                </figure>
-                <div class="card-body w-2/4 ">
-                    <div class="flex justify-start w-[150px] bg-[#1111110D] py-3 px-4 rounded-lg items-center">
-                        <img class="mr-2" src="./assets/coin.png" alt="">
-                        <p id="donation-value-3" class="mr-1">6000</p><span>BDT</span>
-                    </div>
-                    <h2 class="card-title">Aid for Injured in the Quota Movement</h2>
-                    <p> The recent Quota movement has resulted in numerous injuries and significant hardship for many
-                        individuals. Your support is crucial in providing medical assistance, rehabilitation, and
-                        necessary supplies to those affected. By contributing, you help ensure that injured individuals
-                        receive the care and support they need during this challenging time. Every donation plays a
-                        vital role in alleviating their suffering and aiding in their recovery. Please consider making a
-                        donation to support these brave individuals in their time of need.</p>
-                    <input type="number" id="donation-input-3" class="border border-[#1111111A] p-4 rounded-lg"
-                        placeholder="Write Donation Amount">
-                    <button id="btn-donate-3" class="btn bg-[#B4F461]">Donate Now</button>
-                    <dialog id="my_modal_3" class="modal text-center">
-                        <div class="modal-box">
-                            <h2 class="text-2xl font-bold">Congrats!</h3>
-                                <div class="flex justify-center mt-3">
-                                    <img src="./assets/coin.png" alt="">
-                                </div>
-                                <p class="py-4 text-gray-600">You have donate for humankind</p>
-                                <h4 class="text-lg font-bold">Successfully</h4>
-                                <div class="modal-action flex justify-center">
-                                    <form method="dialog">
-                                        <!-- if there is a button in form, it will close the modal -->
-                                        <button class="btn">Close confirmation</button>
-                                    </form>
-                                </div>
+            <div class="border border-[#1111111A] rounded-2xl">
+                <div class="card card-side">
+                    <figure class="pl-5 py-5">
+                        <img src="./assets/quota-protest.png" alt="Noakhali Flood" />
+                    </figure>
+                    <div class="card-body w-2/4 ">
+                        <div class="flex justify-start w-[150px] bg-[#1111110D] py-3 px-4 rounded-lg items-center">
+                            <img class="mr-2" src="./assets/coin.png" alt="">
+                            <p id="donation-value-3" class="mr-1">6000</p><span>BDT</span>
                         </div>
-                    </dialog>
+                        <h2 class="card-title">Aid for Injured in the Quota Movement</h2>
+                        <p> The recent Quota movement has resulted in numerous injuries and significant hardship for many
+                            individuals. Your support is crucial in providing medical assistance, rehabilitation, and
+                            necessary supplies to those affected. By contributing, you help ensure that injured individuals
+                            receive the care and support they need during this challenging time. Every donation plays a
+                            vital role in alleviating their suffering and aiding in their recovery. Please consider making a
+                            donation to support these brave individuals in their time of need.</p>
+                        <input type="number" id="donation-input-3" class="border border-[#1111111A] p-4 rounded-lg"
+                            placeholder="Write Donation Amount">
+                        <button id="btn-donate-3" class="btn bg-[#B4F461]">Donate Now</button>
+                        <dialog id="my_modal_3" class="modal text-center">
+                            <div class="modal-box">
+                                <h2 class="text-2xl font-bold">Congrats!</h3>
+                                    <div class="flex justify-center mt-3">
+                                        <img src="./assets/coin.png" alt="">
+                                    </div>
+                                    <p class="py-4 text-gray-600">You have donate for humankind</p>
+                                    <h4 class="text-lg font-bold">Successfully</h4>
+                                    <div class="modal-action flex justify-center">
+                                        <form method="dialog">
+                                            <!-- if there is a button in form, it will close the modal -->
+                                            <button class="btn">Close confirmation</button>
+                                        </form>
+                                    </div>
+                            </div>
+                        </dialog>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <section class="hidden">
-            <div></div>
+            </div>      
+        </section>
+        <section id="history-container" class="space-y-6 w-3/4 mx-auto mt-10 mb-20 hidden">
+            
         </section>
     </main>
     <footer>
