--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         class="btn bg-[#B4F461] py-3 px-8 border-none font-bold text-xl">Blog</button></a>
                 <div class="flex items-center gap-3">
                     <img src="./assets/logo.png" alt="">
-                    <p class="font-bold text-xl">Donate Bangladesh</p>
+                    <p class="font-bold text-xl hidden md:block ">Donate Bangladesh</p>
                 </div>
                 <div class="flex items-center gap-1">
                     <img class="mr-2" src="./assets/coin.png" alt="">
@@ -42,13 +42,13 @@
         </div>
     </header>
     <main>
-        <section id="donation-container" class="w-3/4 m-auto mt-10 space-y-6">
+        <section id="donation-container" class="md:w-3/4 m-auto mt-10 space-y-6">
             <div class="border border-[#1111111A] rounded-2xl">
                 <div class="card card-side">
-                    <figure class="pl-5 py-5">
-                        <img src="./assets/noakhali.png" alt="Noakhali Flood" />
+                    <figure class="md:pl-5 md:py-5 p-0">
+                        <img class=" hidden md:block" src="./assets/noakhali.png" alt="Noakhali Flood" />
                     </figure>
-                    <div class="card-body w-2/4 ">
+                    <div class="card-body md:w-2/4 ">
                         <div class="flex justify-start w-[150px] bg-[#1111110D] py-3 px-4 rounded-lg items-center">
                             <img class="mr-2" src="./assets/coin.png" alt="">
                             <p id="donation-value" class="mr-1">8000</p><span>BDT</span>
@@ -83,10 +83,10 @@
             </div>
             <div class="border border-[#1111111A] rounded-2xl">
                 <div class="card card-side">
-                    <figure class="pl-5 py-5">
-                        <img src="./assets/feni.png" alt="Noakhali Flood" />
+                    <figure class="md:pl-5 md:py-5 p-0">
+                        <img class="hidden md:block" src="./assets/feni.png" alt="Noakhali Flood" />
                     </figure>
-                    <div class="card-body w-2/4 ">
+                    <div class="card-body md:w-2/4">
                         <div class="flex justify-start w-[150px] bg-[#1111110D] py-3 px-4 rounded-lg items-center">
                             <img class="mr-2" src="./assets/coin.png" alt="">
                             <p id="donation-value-2" class="mr-1">4000</p><span>BDT</span>
@@ -122,10 +122,10 @@
             </div>
             <div class="border border-[#1111111A] rounded-2xl">
                 <div class="card card-side">
-                    <figure class="pl-5 py-5">
-                        <img src="./assets/quota-protest.png" alt="Noakhali Flood" />
+                    <figure class="md:pl-5 md:py-5 p-0">
+                        <img class="hidden md:block" src="./assets/quota-protest.png" alt="Noakhali Flood" />
                     </figure>
-                    <div class="card-body w-2/4 ">
+                    <div class="card-body md:w-2/4 ">
                         <div class="flex justify-start w-[150px] bg-[#1111110D] py-3 px-4 rounded-lg items-center">
                             <img class="mr-2" src="./assets/coin.png" alt="">
                             <p id="donation-value-3" class="mr-1">6000</p><span>BDT</span>
