--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                         <h2 class="card-title">Donate for Flood at Noakhali, Bangladesh</h2>
                         <p> The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
                             donation will help provide essential supplies and to those affected by this disaster. Every
-                            contribution, big or small, makes difference. Please join us in supporting the relief efforts
+                            contribution, big or small, makes difference. Please join us in supporting the relief
+                            efforts
                             and making a positive impact on the lives of those in need.</p>
                         <input type="number" id="donation-input" class="border border-[#1111111A] p-4 rounded-lg"
                             placeholder="Write Donation Amount">
-                        <!-- Open the modal using ID.showModal() method -->
                         <button id="btn-donate" class="btn bg-[#B4F461]">Donate Now</button>
                         <dialog id="my_modal_1" class="modal text-center">
                             <div class="modal-box">
@@ -72,7 +72,6 @@
                                     <h4 class="text-lg font-bold">Successfully</h4>
                                     <div class="modal-action flex justify-center">
                                         <form method="dialog">
-                                            <!-- if there is a button in form, it will close the modal -->
                                             <button class="btn">Close confirmation</button>
                                         </form>
                                     </div>
@@ -92,11 +91,12 @@
                             <p id="donation-value-2" class="mr-1">4000</p><span>BDT</span>
                         </div>
                         <h2 class="card-title">Donate for Flood Relief in Feni,Bangladesh</h2>
-                        <p> The recent floods in Feni have devastated local communities, leading to severe disruption and
-                            loss. Your generous donation will help provide immediate aid, including food, clean water, and
-                            medical supplies, to those affected by this calamity. Together, we can offer crucial support and
-                            help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a
-                            real difference. Please consider donating today to assist those in urgent need.</p>
+                        <p> The recent floods in Feni have devastated local communities, leading to severe disruption
+                            and loss. Your generous donation will help provide immediate aid, including food, clean
+                            water, and medical supplies, to those affected by this calamity. Together, we can offer
+                            crucial support and help rebuild lives in the aftermath of this disaster. Every contribution
+                            counts towards making a real difference. Please consider donating today to assist those in
+                            urgent need.</p>
                         <input type="number" id="donation-input-2" class="border border-[#1111111A] p-4 rounded-lg"
                             placeholder="Write Donation Amount">
                         <button id="btn-donate-2" class="btn bg-[#B4F461]">Donate
@@ -111,7 +111,6 @@
                                     <h4 class="text-lg font-bold">Successfully</h4>
                                     <div class="modal-action flex justify-center">
                                         <form method="dialog">
-                                            <!-- if there is a button in form, it will close the modal -->
                                             <button class="btn">Close confirmation</button>
                                         </form>
                                     </div>
@@ -131,10 +130,9 @@
                             <p id="donation-value-3" class="mr-1">6000</p><span>BDT</span>
                         </div>
                         <h2 class="card-title">Aid for Injured in the Quota Movement</h2>
-                        <p> The recent Quota movement has resulted in numerous injuries and significant hardship for many
-                            individuals. Your support is crucial in providing medical assistance, rehabilitation, and
-                            necessary supplies to those affected. By contributing, you help ensure that injured individuals
-                            receive the care and support they need during this challenging time. Every donation plays a
+                        <p> The recent Quota movement has resulted in numerous injuries and significant hardship for
+                            manyindividuals. Your support is crucial in providing medical assistance, rehabilitation, and
+                            necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a
                             vital role in alleviating their suffering and aiding in their recovery. Please consider making a
                             donation to support these brave individuals in their time of need.</p>
                         <input type="number" id="donation-input-3" class="border border-[#1111111A] p-4 rounded-lg"
@@ -150,7 +148,6 @@
                                     <h4 class="text-lg font-bold">Successfully</h4>
                                     <div class="modal-action flex justify-center">
                                         <form method="dialog">
-                                            <!-- if there is a button in form, it will close the modal -->
                                             <button class="btn">Close confirmation</button>
                                         </form>
                                     </div>
@@ -158,10 +155,10 @@
                         </dialog>
                     </div>
                 </div>
-            </div>      
+            </div>
         </section>
         <section id="history-container" class="space-y-6 w-3/4 mx-auto mt-10 mb-20 hidden">
-            
+
         </section>
     </main>
     <footer>
